--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.mysql-connector-java-8.0.30.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-j-8.0.31.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
