--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/LittleTree
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-8.0.31.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.30.jar
 includes=**
 jar.compress=false
@@ -45,7 +46,7 @@ javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=\
-    ${file.reference.mysql-connector-java-8.0.30.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -76,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=LittleTree
-main.class=br.com.pauloarcenio.gui.LittletreeGUI
+main.class=br.com.pauloarcenio.gui.TelaInicio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
